# py-argmerge

./: .coveragerc  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  quick_tests.ipynb  sitemap.xml  threshold.json  threshold.yaml  tox.ini
.github/workflows/: build.yml  publish-document-pages  publish-document-pages.yml  publish-documentation.yml  publish-pages.yml
autoapi/argmerge/: index.html
autoapi/argmerge/base/: index.html
autoapi/argmerge/cli/: index.html
autoapi/argmerge/decorator/: index.html
autoapi/argmerge/env/: index.html
autoapi/argmerge/func/: index.html
autoapi/argmerge/json/: index.html
autoapi/argmerge/trace/: index.html
autoapi/argmerge/utils/: index.html
autoapi/argmerge/yaml/: index.html
autoapi/summary/: index.html
docs/: examples.md  index.md
docs/API/: main.md
examples/: index.html
search/: search_index.json
src/argmerge/: __init__.c  __init__.py  _cli.c  _cli.pyx  _env.c  _env.pyx  _func.c  _func.pyx  _json.c  _json.pyx  _trace.c  _trace.pyx  _utils.c  _utils.pyx  _yaml.c  _yaml.pyx  base.py  cli.py  decorator.c  decorator.py  env.py  func.py  json.py  trace.py  yaml.py
tests/base/: test_base.py
tests/decorator/: test_decorator.py
tests/env/: test_env.py
tests/func/: test_func.py
tests/json/: good_config.json  test_json.py
tests/yaml/: test_yaml.py
