[project]
name = "argmerge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "duck-bongos", email = "billmannd@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "mkdocs-material>=9.6.21",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
documentation = [
    "mkdocs>=1.6.1",
    "mkdocs-landing>=0.0.8",
    "mkdocs-terminal>=4.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ["argmerge"]
